# rdkit-pypi

./: .cirrus.yml  .gitignore  .pre-commit-config.yaml  Dockerfile.manylinux2014_x86_64  Dockerfile.manylinux_2_24_x86_64  LICENSE.md  README.md  azure-pipelines.yml  conanfile.py  pre_linux.sh  pre_mac.sh  pyproject.toml  setup.py  vcpkg.json  wheeling.sh
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check_rdkit_version.yml  test_rdkit.yml  wheels.yml
conan_boost_mod/all/: conandata.yml  conanfile.py  rebuild-dependencies.py
conan_boost_mod/all/boost/: conan_paths.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
conan_boost_mod/all/patches/: 0001-beast-fix-moved-from-executor.patch  0001-revert-cease-dependence-on-range.patch  1.69.0-chrono-no-system.patch  1.69.0-contract-no-system.patch  1.69.0-coroutine-no-system.patch  1.69.0-filesystem-no-system.patch  1.69.0-locale-no-system.patch  1.69.0-log-no-system.patch  1.69.0-random-no-system.patch  1.69.0-thread-no-system.patch  1.69.0-type_erasure-no-system.patch  1.75.0-python-make-python-3-11-compatible.patch  1.77.0-fiber-mingw.patch  1.77.0-type_erasure-no-system.patch  1.78.0-b2-fix-install.patch  1.85.0-OWNPATH-numpy2.patch  bcp_namespace_issues_1_70.patch  bcp_namespace_issues_1_71.patch  boost_1_77_mpi_check.patch  boost_build_asmflags.patch  boost_build_qcc_fix_debug_build_parameter.patch  boost_build_qcc_fix_debug_build_parameter_since_1_74.patch  boost_locale_fail_on_missing_backend.patch  boost_mpi_check.patch  python_base_prefix.patch  python_base_prefix_since_1_74.patch  static_object_init.patch  support_msvc_2019.patch
conan_boost_mod/all/test_package/: conanfile.py
conan_boost_mod/all/test_v1_package/: CMakeLists.txt  conanfile.py
tests/: test_main.py  test_stubs.py
