[build-system]
requires = [
    "setuptools==75.2.0",
    "wheel",
    "cmake == 3.31.1",
    "numpy",
    "conan == 2.11.0",
    "ninja",
    "pybind11-stubgen",
    "Pillow",  # required for building the stubs
    ]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

build-verbosity = "1"
# build-frontend = { name = "build[uv]"}
# test
test-requires = "pytest"
test-command = "pytest --exitfirst --verbose --failed-first {package}/tests"
# test-skip = "*-win_amd64"


manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"


[tool.cibuildwheel.linux]
before-all = [
    "yum update -y",
    "yum install freetype-devel libpng-devel pixman-devel zlib-devel eigen3-devel cairo-devel -y"
]

repair-wheel-command = [
    # for boost libs
    'source conan/conanrun.sh',
    'auditwheel repair -w {dest_dir} {wheel}'
]

environment-pass = ["CIBW_BUILD"]

[tool.cibuildwheel.macos]

# Disable installing libraries using brew because they do not meet the development target
# eigen cairo freetype libpixman
before-all = ["brew install gnu-sed"]

repair-wheel-command = [
    "export DYLD_LIBRARY_PATH='/usr/local/lib:/usr/lib:/Users/admin/lib:/Users/runner/work/lib'",
    "source conan/conanrun.sh",
    "delocate-listdeps {wheel}",
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

# The delocate-wheel command verifies the MACOSX_DEPLOYMENT_TARGET version of the libraries.
# Since the build platform's macOS version differs from the deployment target, we need to specify it explicitly here.
# delocate reads the target from the environment variable.
# The target for x86_64 is set to 10.13.
environment = { MACOSX_DEPLOYMENT_TARGET="10.13" }

[[tool.cibuildwheel.overrides]]
# The target for arm64 is 11.0
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET="11.0" }

[tool.cibuildwheel.windows]

before-build = [
    "pip install delvewheel",
]

environment = { TMP='C:\\temp', TEMP='C:\\temp', RUNNER_TEMP='C:\\temp'}
repair-wheel-command = [
    "C:\\rdkit\\conan\\conanrun.bat",
    "delvewheel show -v --add-path C:\\libs;C:\\rdkit\\vcpkg_installed\\x64-windows\\bin {wheel}",
    "delvewheel repair -v --add-path C:\\libs;C:\\rdkit\\vcpkg_installed\\x64-windows\\bin -w {dest_dir} {wheel}"
    ]
